--- a/sudoku/style.css
+++ b/sudoku/style.css
@@ -488,8 +488,8 @@ button.primary:hover {
     }
 }
 
-/* Consent Banner Modal */
-.consent-banner {
+/* Consent Dialog Modal */
+.consent-dialog {
     position: fixed;
     top: 0;
     left: 0;
