--- a/chess/style.css
+++ b/chess/style.css
@@ -1,4 +1,4 @@
-/* Import common consent styles */
+/* Import common styles */
 @import url('../common/consent.css');
 
 @import url('./promotion.css');
